--- a/.harness/python_ci.yaml
+++ b/.harness/python_ci.yaml
@@ -74,7 +74,7 @@ pipeline:
                   identifier: build_and_push_to_the_docker_registry
                   spec:
                     connectorRef: dockerconnector
-                    repo: vengalarao729/
+                    repo: vengalarao729/python-flask
                     tags:
                       - <+pipeline.executionId>
                     dockerfile: <+stage.variables.dockerfilename>
