Update pipeline python_ci

--- a/.harness/python_ci.yaml
+++ b/.harness/python_ci.yaml
@@ -69,3 +69,9 @@ pipeline:
               spec:
                 poolName: ubuntu-gcp-pool
                 os: Linux
+        variables:
+          - name: dockerfilename
+            type: String
+            description: ""
+            required: false
+            value: dockerfile
