Update pipeline python_ci

--- a/.harness/python_ci.yaml
+++ b/.harness/python_ci.yaml
@@ -69,6 +69,8 @@ pipeline:
               spec:
                 poolName: ubuntu-gcp-pool
                 os: Linux
+              delegateSelectors:
+                - docker-delegate
         variables:
           - name: dockerfilename
             type: String
