Update pipeline python_ci

--- a/.harness/python_ci.yaml
+++ b/.harness/python_ci.yaml
@@ -75,3 +75,5 @@ pipeline:
             description: ""
             required: false
             value: dockerfile
+        delegateSelectors:
+          - docker-delegate-cv
