Update pipeline python_ci

--- a/.harness/python_ci.yaml
+++ b/.harness/python_ci.yaml
@@ -68,6 +68,7 @@ pipeline:
               type: Pool
               spec:
                 poolName: ubuntu-gcp
+                harnessImageConnectorRef: dockerconnector
                 os: Linux
         variables:
           - name: dockerfilename
